	admin:
	. chantier: garder le champ "ou ?" pour une adresse "poétique", et ajouter un champ adresse exacte pour google R#2014.03.12
	. chantier: le champs adresse positionne le marker sur la carte, et non le champs "ou ?" R#2014.03.12
	. importv2chantiers: ne pas importer les fichiers attachés (fiche d'inscription, etc...) R#2014.03.12
	projet NetBeans
	. ajout de la licence Affero GPL

@version 0.1.10 - @date 2014.03.17
	site:
	. chantiers: si la date du jour > date_fin ==> affiche le chantier comme [TERMINÉ] R#2014.03.12
	. chantier: si la date du jour > date_fin ==> affiche le chantier comme [TERMINÉ] R#2014.03.12
	. importv2chantiers: différencier les chantiers déjà importer des nouveaux R#2014.03.12
	. importv2articles: différencier les articles déjà importer des nouveaux R#2014.03.12
	languages:
	. fr-FR: ajout d'une description pour différencer date_debut de publish_up et date_fin de publish_down R#2014.03.12

@version 0.1.9 - @date 2014.03.12
	admin:
	. chantiers: colonnes sortables + ajout colonne date de début de chantier -> OK
	. chantier: intégration OpenStreetMap avec le layer leaflet
	. js/osm-leaflet.php: intégration de nominatim de OpenStreetMap pour le service de reverse-geocoding
	site:
	. intégration OpenStreetMap avec le layer leaflet
	=> chantiers -> OK
	=> mappemonde -> OK
	=> chantier -> OK

@version 0.1.8 - @date 2013.03.21
	admin:
	. importV2articles: (grosses) optimisations de l'importation

@version 0.1.7 - @date 2013.03.20
	admin:
	. sql: ajout d'un champs "countrycode" à la table "chantiers"
	. importV2chantiers: geocoding et reverse geocoding lors de l'importation pour fixer correctement les champs "coutrycode" et "pays"
	. chantiers: ajout du filtre "pays" en utilisant le countrycode
	. chantiers: ajout du filtre "published"
	. chantiers: ajout d'un bouton "mettre à la corbeille"
	. catégoriesChantiers: ajout d'un bouton "mettre à la corbeille"
	. apl: ajout du bouton préférences dès la page d'acceuil
